tests/NormalTests/paczka1/fuzzy1/52242944.err
Error in line 3: hzhgkHV S794 38,3
Error in line 30: HLrynp A799 75,3
Error in line 36: yTy8yz9K A709 142,3
Error in line 19: B99XNypuR S794 70,2
